syntax = "proto3";

message ImgRequest{
    string productId = 1;
    bytes imageData = 2;
}

message ImgResponse {
    string message = 1;
    string productName = 2;
}

service ImageService{
    rpc UploadProductImage (ImgRequest) returns (ImgResponse); 
}
